--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,12 @@ dependencies:
     sdk: flutter
   kakao_flutter_sdk: 1.9.6
   kakao_flutter_sdk_user: 1.9.6
-  firebase_core : 2.32.0
-  cloud_firestore: 4.17.5
-  firebase_auth : ^4.16.0
+  firebase_core : 3.8.0
+  cloud_firestore: 5.5.0
+  firebase_auth : 5.3.3
   google_maps_flutter : 2.2.2
   location : 7.0.1
   http : ^1.2.2
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
