--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   kakao_flutter_sdk: 1.9.6
   kakao_flutter_sdk_user: 1.9.6
+
   firebase_core : 3.8.0
   cloud_firestore: 5.5.0
   firebase_auth : 5.3.3
-  google_maps_flutter : 2.2.2
+
+  google_maps_flutter : 2.10.0
   location : 7.0.1
   http : ^1.2.2
+
+  uuid : ^4.5.1
+  provider : ^6.0.0
+  firebase_storage : ^12.3.6
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -68,6 +76,7 @@ flutter:
   assets:
     - asset/img/kakao_logo.png
     - asset/img/logo2.png
+    - asset/img/kakaoimage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
