--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   kakao_flutter_sdk: 1.9.6
   kakao_flutter_sdk_user: 1.9.6
+  google_sign_in: ^5.4.1
 
   firebase_core : 3.8.0
   cloud_firestore: 5.5.0
@@ -45,6 +46,13 @@ dependencies:
   uuid : ^4.5.1
   provider : ^6.0.0
   firebase_storage : ^12.3.6
+
+  geolocator : ^9.0.2
+  modal_side_sheet : ^0.0.1
+  permission_handler : ^11.3.1
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,9 +82,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/img/kakao_logo.png
     - asset/img/logo2.png
-    - asset/img/kakaoimage.png
+    - asset/img/kakao_logo.png
+    - asset/img/google_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
